corrected spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -470,7 +470,7 @@ height: 100%; */
     color: #323e88;
     border-bottom: #A1A6C8 2px solid;
     padding-left: 20px;
-    padding-top: 3px;
+    padding-top: 5px;
     padding-bottom: 3px;
     height: 100%;
 }
